# devtoolbox

./: .gitignore  DEVELOPER.md  MANIFEST.in  README.md  README_zh.md  env.sample  pyproject.toml
.cursor/rules/: python-rules.mdc
devtoolbox/: dify_client.py  jira_client.py  storage.py  webhook.py
devtoolbox/api_clients/: github_client.py  jira_client.py
devtoolbox/cli/: __init__.py  main.py  setup_nlp.py  utils.py
devtoolbox/cli/commands/: __init__.py  github.py  images.py  jira.py  llm.py  markdown.py  ocr.py  search.py  speech.py  storage.py  webhook.py  whisper.py
devtoolbox/images/: convertor.py  downloader.py
devtoolbox/llm/: __init__.py  azure_openai_provider.py  deepseek.py  deepseek_provider.py  openai_provider.py  provider.py  service.py
devtoolbox/markdown/: base.py  converter.py  formatter.py  image_downloader.py
devtoolbox/ocr/: __init__.py  azure_provider.py  provider.py  service.py  utils.py
devtoolbox/search_engine/: duckduckgo.py
devtoolbox/speech/: __init__.py  azure_provider.py  provider.py  service.py  utils.py  volc_provider.py  whisper_provider.py
devtoolbox/speech/clients/: azure_client.py  azure_errors.py
devtoolbox/text/: splitter.py
devtoolbox/text_splitter/: base.py  paragraph_splitter.py  token_splitter.py  utils.py
examples/: test_images_downloader.py  test_jira_client.py  test_llm_deepseek.py  test_llm_openai.py  test_markdown_formatter.py  test_markdown_image_downloader.py  test_speech_provider_azure.py  test_speech_provider_whisper.py  test_storage.py  test_text_splitter.py  test_webhook.py
examples/images/: test_images_downloader.py  test_search_images_downloader.py
examples/llm/: test_azure_openai_chat.py  test_deepseek_chat.py  test_openai_chat.py
examples/markdown/: test_markdown_converter.py
examples/speech/: test_azure_speech_to_text.py  test_azure_text_to_speech.py  test_whisper_speech_to_text.py
examples/text/: paragraph_splitter_sample.py  test_text_splitter.py  token_splitter_sample.py
sample_data/audio/: long_chinese_5min.m4a  long_english_5min.m4a
sample_data/llm/prompts/: chain.txt  chat.txt
sample_data/markdown/: .gitignore  README.md  basic.docx  basic.md  technical.md  with_images.md
sample_data/text/: read_aloud_test.txt
tests/llm/: test_azure_openai_provider.py  test_base_provider.py  test_deepseek_provider.py  test_openai_provider.py  test_service.py
tests/mannual/ocr/: test_429_retry.py
tests/mannual/speech/: test_split_speech_chunks.py
tests/obsolete/: test_file_storage.py  test_images_convertor.py  test_images_downloader.py  test_jira_client.py  test_llm_deepseek_provider.py  test_llm_openai_provider.py  test_llm_service.py  test_markdown_converter.py  test_markdown_formatter.py  test_markdown_image_downloader.py  test_object_storage.py  test_speech_azure_provider.py  test_speech_service.py  test_speech_whisper_provider.py  test_text_splitter.py
tests/ocr/: test_azure_provider.py  test_service.py
tests/speech/: test_azure_provider.py
tests/utils/: test_logging.py
