# Build system configuration
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "devtoolbox"
version = "0.1.0"
description = "Developer toolbox with text processing capabilities"
authors = [
    {name = "Ray Sun", email = "xiaoquqi@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

# Core dependencies
dependencies = [
    "jira>=3.5.1",
    "markdown>=3.5.1",
    "python-gitlab>=3.15.0",
    "pypandoc>=1.12",
    "requests>=2.31.0",
    "pypinyin>=0.48.0",
    "retry>=0.9.2",
    "Pillow>=10.2.0",
    "spacy>=3.7.2",
    "langdetect>=1.0.9",
    "pydub>=0.25.1",
    "cairosvg>=2.7.1",
    "boto3>=1.34.34",
    "beautifulsoup4>=4.12.2",
    "minio>=7.2.0",
    "duckduckgo-search>=4.1.1",
    "imagehash>=4.3.1",
    "tenacity>=8.2.3",
    "dataclasses>=0.8",
    "langid>=1.1.6"
]

# Package configuration
[tool.setuptools]
packages = ["devtoolbox"]

# Optional dependencies
[project.optional-dependencies]
# LLM related dependencies
llm = [
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.10",
    "tiktoken>=0.5.2",
    "transformers>=4.36.2"
]

# Speech related dependencies
speech = [
    "pydub>=0.25.1",
    "whisper>=1.0.0",
    "azure-cognitiveservices-speech>=1.32.0"
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0"
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.3",
    "mkdocstrings>=0.24.0"
]

[project.scripts]
devtoolbox-setup-nlp = "devtoolbox.cmd.setup_nlp:download_spacy_models"