# Build system configuration
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "devtoolbox"
version = "0.1.0"
description = "Developer toolbox with text processing capabilities"
authors = [
    {name = "Ray Sun", email = "xiaoquqi@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

# Core dependencies
dependencies = [
    # JIRA API client for issue tracking and project management
    # Used in: devtoolbox/api_clients/jira_client.py
    "jira>=3.5.1",

    # GitHub API client for repository management
    # Used in: devtoolbox/api_clients/github_client.py
    "PyGithub>=2.1.1",

    # Markdown processing and conversion
    # Used in: devtoolbox/markdown/* (formatter.py, converter.py, image_downloader.py)
    "markdown>=3.5.1",

    # GitLab API client for repository management
    # Used in: devtoolbox/api_clients/gitlab_client.py
    "python-gitlab>=3.15.0",

    # Document format conversion
    # Used in: devtoolbox/markdown/converter.py
    "pypandoc>=1.12",

    # HTTP client for API requests
    # Used in: devtoolbox/api_clients/*, devtoolbox/search_engine/*
    "requests>=2.31.0",

    # Chinese pinyin conversion
    # Used in: devtoolbox/text/* (text processing utilities)
    "pypinyin>=0.48.0",

    # Retry mechanism for API calls
    # Used in: devtoolbox/api_clients/*, devtoolbox/search_engine/*
    "retry>=0.9.2",

    # HTML parsing
    # Used in: devtoolbox/search_engine/*, devtoolbox/web/* (web scraping utilities)
    "beautifulsoup4>=4.12.2",

    # DuckDuckGo search API
    # Used in: devtoolbox/search_engine/duckduckgo.py
    "duckduckgo-search>=4.1.1",

    # Advanced retry mechanism
    # Used in: devtoolbox/llm/* (LLM providers)
    "tenacity>=8.2.3",

    # CLI framework
    # Used in: devtoolbox/cli/* (command line interface)
    "typer>=0.9.0",

    # YAML support
    # Used in: devtoolbox/cli/commands/webhook.py
    "pyyaml>=6.0.1"
]

# Package configuration
[tool.setuptools]
packages = ["devtoolbox"]
include-package-data = true
zip-safe = false

# Optional dependencies
[project.optional-dependencies]
# Storage related dependencies
storage = [
    # MinIO client for object storage
    # Used in: devtoolbox/storage.py
    "minio>=7.2.0"
]

# Speech related dependencies
speech = [
    # Audio processing
    # Used in: devtoolbox/speech/* (speech providers)
    "pydub>=0.25.1",

    # OpenAI Whisper for speech recognition
    # Used in: devtoolbox/speech/whisper_provider.py
    "openai-whisper>=20231117",

    # Azure Speech Services
    # Used in: devtoolbox/speech/azure_provider.py
    "azure-cognitiveservices-speech>=1.32.0",

    # Subtitle processing
    # Used in: devtoolbox/speech/* (subtitle utilities)
    "pysubs2>=1.5.0"
]

# Image processing related dependencies
image = [
    # Image processing
    # Used in: devtoolbox/images/*, devtoolbox/markdown/image_downloader.py
    "Pillow>=10.2.0",

    # SVG processing
    # Used in: devtoolbox/images/* (image processing utilities)
    "cairosvg>=2.7.1",

    # Image hashing for similarity detection
    # Used in: devtoolbox/images/* (image processing utilities)
    "imagehash>=4.3.1"
]

# OCR related dependencies
ocr = [
    # Azure Document Intelligence
    # Used in: devtoolbox/ocr/azure_provider.py
    "azure-ai-documentintelligence>=1.0.0",

    # NumPy for array operations
    # Used in: devtoolbox/ocr/azure_provider.py
    "numpy>=1.24.0"
]

# LLM related dependencies
llm = [
    # OpenAI API client
    # Used in: devtoolbox/llm/openai_provider.py
    "openai>=1.12.0",

    # LangChain framework
    # Used in: devtoolbox/llm/* (LLM providers and utilities)
    "langchain>=0.1.0",

    # LangChain OpenAI integration
    # Used in: devtoolbox/llm/* (LLM providers)
    "langchain-openai>=0.0.5",

    # LangChain core functionality
    # Used in: devtoolbox/llm/* (LLM providers)
    "langchain-core>=0.1.10",

    # OpenAI tokenizer
    # Used in: devtoolbox/llm/* (token counting utilities)
    "tiktoken>=0.5.2",

    # Hugging Face Transformers
    # Used in: devtoolbox/llm/* (model loading and inference)
    "transformers>=4.36.2",

    # NLP processing
    # Used in: devtoolbox/text_splitter/* (text processing utilities)
    "spacy>=3.7.2",

    # Language detection
    # Used in: devtoolbox/text_splitter/* (text processing utilities)
    "langid>=1.1.6"
]

# Development dependencies
dev = [
    # Testing framework
    # Used in: tests/* (all test files)
    "pytest>=8.0.0",

    # Code formatting
    # Used in: .pre-commit-config.yaml
    "black>=24.1.0",

    # Test coverage
    # Used in: tests/* (coverage reporting)
    "pytest-cov>=4.1.0",

    # Type checking
    # Used in: mypy.ini
    "mypy>=1.8.0",

    # Import sorting
    # Used in: .pre-commit-config.yaml
    "isort>=5.13.0"
]

# Documentation dependencies
docs = [
    # Documentation generator
    # Used in: mkdocs.yml
    "mkdocs>=1.5.3",

    # API documentation
    # Used in: mkdocs.yml
    "mkdocstrings>=0.24.0"
]

[project.scripts]
devtoolbox-setup-nlp = "devtoolbox.cli.setup_nlp:download_spacy_models"
devtoolbox = "devtoolbox.cli.main:main"